@@ -1,3 +1,13 @@
+2004-03-14  Christopher Faylor  <cgf@redhat.com>
+
+	* cygtls.cc (_cygtls::remove): Call remove_wq even when we can't
+	necessarily get the cygtls table lock.
+	* cygtls.h (_cygtls::remove_wq): Add wait argument.
+	* sigproc.cc (_cygtls::remove_wq): Honor wait argument when acquiring
+	lock.
+	(proc_terminate): Don't NULL sync_proc_subproc since other threads may
+	still try to access it.
+
 2004-03-12  Corinna Vinschen  <corinna@vinschen.de>
 
 	* errno.cc (errmap): Map ERROR_BEGINNING_OF_MEDIA and
